Fixed the extra space on the contact image links that was causing an underlined space next to image on hover

--- a/style.css
+++ b/style.css
@@ -34,12 +34,17 @@ body {
 }
 
 .icon-img {
-	height: 50px;
-	width: 50px;
+	height: 35px;
+	width: 35px;
 	
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: 3px;
+	margin-right: 3px;
 	margin-bottom: 2px;
+
+}
+
+.icon-img:hover{
+  background: transparent;
 }
 
 .spacer {
